fix install dependencies

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM    node:lts as builder
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
-RUN npm install react-scripts@3.4.1 -g --silent
+RUN npm install -q --silent
 COPY . ./
 RUN npm run build
 
